--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,3 +6,9 @@ data_ingestion:
   source_url: https://drive.google.com/file/d/1CAr0aO-6rcIDEWp1itekpgxBho0WP5c4/view?usp=sharing
   local_data_file: artifacts/data_ingestion/alzeihmer_dataset.zip
   unzip_dir: artifacts/data_ingestion
+
+
+prepare_base_model:
+  root_dir: artifacts/prepare_base_model
+  base_model_path: artifacts/prepare_base_model/base_model.h5
+  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
