--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,8 +7,16 @@ data_ingestion:
   local_data_file: artifacts/data_ingestion/alzeihmer_dataset.zip
   unzip_dir: artifacts/data_ingestion
 
-
 prepare_base_model:
   root_dir: artifacts/prepare_base_model
   base_model_path: artifacts/prepare_base_model/base_model.h5
   updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
+
+prepare_callbacks:
+  root_dir: artifacts/prepare_callbacks 
+  tensorboard_root_log_dir: artifacts/prepare_callbacks/tensorboard_log_dir
+  checkpoint_model_filepath: artifacts/prepare_callbacks/checkpoint_dir/model.h5
+
+training:
+  root_dir: artifacts/training
+  trained_model_path: artifacts/training/model.h5
