--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,1 +1,55 @@
-key: value
+
+stages:
+  data_ingestion:
+    cmd: python src/alzeihmer_detection/pipeline/stage_01_data_ingestion.py
+    deps:
+      - src/alzeihmer_detection/pipeline/stage_01_data_ingestion.py
+      - config/config.yaml
+    outs:
+      - artifacts/data_ingestion/
+
+
+  prepare_base_model:
+    cmd: python src/alzeihmer_detection/pipeline/stage_02_prepare_base_model.py
+    deps:
+      - src/alzeihmer_detection/pipeline/stage_02_prepare_base_model.py
+      - config/config.yaml
+    params:
+      - IMAGE_SIZE
+      - INCLUDE_TOP
+      - CLASSES 
+      - WEIGHTS
+      - LEARNING_RATE
+    outs:
+      - artifacts/prepare_base_model
+
+
+  training:
+    cmd: python src/alzeihmer_detection/pipeline/stage_03_training.py
+    deps:
+      - src/alzeihmer_detection/pipeline/stage_03_training.py
+      - config/config.yaml
+      - artifacts/data_ingestion/
+      - artifacts/prepare_base_model
+    params:
+      - AUGMENTATION
+      - IMAGE_SIZE
+      - BATCH_SIZE
+      - EPOCHS
+    outs:
+      - artifacts/training/model.h5
+
+
+  evaluation:
+    cmd: python src/alzeihmer_detection/pipeline/stage_04_evaluation.py
+    deps:
+      - src/alzeihmer_detection/pipeline/stage_04_evaluation.py
+      - config/config.yaml
+      - artifacts/data_ingestion/
+      - artifacts/training/model.h5
+    params:
+      - IMAGE_SIZE
+      - BATCH_SIZE
+    metrics:
+    - scores.json:
+        cache: false 
